force-app/main/default/objects/redwing__vILT_Meeting__c/redwing__vILT_Meeting__c.object-meta.xml
<CustomObject>
    <label>vILT Meeting</label>
    <nameField>
        <label>vILT Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vILT Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>