force-app/main/default/objects/redwing__vILT_Meeting__c/fields/redwing__Attendance_Synced__c.field-meta.xml
<CustomField>
    <fullName>redwing__Attendance_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Synced</label>
    <type>Checkbox</type>
</CustomField>