force-app/main/default/objects/redwing__vILT_Meeting__c/fields/redwing__Attendance_Synced_Error__c.field-meta.xml
<CustomField>
    <fullName>redwing__Attendance_Synced_Error__c</fullName>
    <label>Attendance Synced Error</label>
    <type>TextArea</type>
</CustomField>