force-app/main/default/objects/redwing__vILT_Meeting__c/fields/redwing__Cancelled__c.field-meta.xml
<CustomField>
    <fullName>redwing__Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>