force-app/main/default/objects/redwing__vILT_Meeting__c/fields/redwing__Launch_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Launch_URL__c</fullName>
    <label>Launch URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>