force-app/main/default/objects/redwing__vILT_Meeting__c/fields/redwing__Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Meeting_Id__c</fullName>
    <label>Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>