force-app/main/default/objects/redwing__vILT_Meeting__c/fields/redwing__Password__c.field-meta.xml
<CustomField>
    <fullName>redwing__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>